WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40537
REGRESSION (
r60974
): Continuous wheel scrolling is too fast in list boxes and in Safari Reader
https://bugs.webkit.org/show_bug.cgi?id=40537
Summary
REGRESSION (r60974): Continuous wheel scrolling is too fast in list boxes and...
mitz
Reported
2010-06-12 21:21:04 PDT
Using Magic Mouse to scroll a list boxes (such as the Component list at <
https://bugs.webkit.org/enter_bug.cgi?product=WebKit
>) and Safari Reader, scrolling is way faster in TOT than in Safari 5. I think this is a regression from <
http://trac.webkit.org/changeset/60974
> and <
http://trac.webkit.org/changeset/60978
>.
Attachments
Don’t multiply continuous deltas by pixelsPerLineStep()
(1.41 KB, patch)
2010-06-13 09:26 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2010-06-12 21:21:49 PDT
<
rdar://problem/8087385
>
Dave Hyatt
Comment 2
2010-06-13 00:19:51 PDT
Did I botch the rollout or did new code get added that depended on the changed behavior
mitz
Comment 3
2010-06-13 09:13:50 PDT
(In reply to
comment #2
)
> Did I botch the rollout or did new code get added that depended on the changed behavior
Looks like the former: <
http://trac.webkit.org/changeset?old_path=%2Ftrunk%2FWebCore%2Fplatform%2Fmac%2FWheelEventMac.mm&old=56011&new_path=%2Ftrunk%2FWebCore%2Fplatform%2Fmac%2FWheelEventMac.mm&new=60974
>.
mitz
Comment 4
2010-06-13 09:26:14 PDT
Created
attachment 58594
[details]
Don’t multiply continuous deltas by pixelsPerLineStep()
mitz
Comment 5
2010-06-13 09:41:13 PDT
Fixed in <
http://trac.webkit.org/changeset/61092
>.
WebKit Review Bot
Comment 6
2010-06-13 10:17:48 PDT
http://trac.webkit.org/changeset/61092
might have broken SnowLeopard Intel Release (Tests)
mitz
Comment 7
2010-06-13 10:22:22 PDT
Updated test results in <
http://trac.webkit.org/changeset/61093
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug