<rdar://problem/8087385> REGRESSION (r60974): Continuous wheel scrolling is too fast in list boxes and in Safari Reader https://bugs.webkit.org/show_bug.cgi?id=40537

Reviewed by Darin Adler.

* platform/mac/WheelEventMac.mm:
(WebCore::PlatformWheelEvent::PlatformWheelEvent): Only multiply by pixelsPerLineStep() if the
event is not continuous, as was before r56012.



Canonical link: https://commits.webkit.org/52105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61092 268f45cc-cd09-0410-ab3c-d52691b4dbfc