WebCore/platform/mac/WheelEventMac.mm
@@ -51,10 +51,9 @@ PlatformWheelEvent::PlatformWheelEvent(NSEvent* event, NSView *windowView)
     } else {
         m_wheelTicksX = m_deltaX;
         m_wheelTicksY = m_deltaY;
+        m_deltaX *= static_cast<float>(Scrollbar::pixelsPerLineStep());
+        m_deltaY *= static_cast<float>(Scrollbar::pixelsPerLineStep());
     }
-
-    m_deltaX *= static_cast<float>(Scrollbar::pixelsPerLineStep());
-    m_deltaY *= static_cast<float>(Scrollbar::pixelsPerLineStep());
 }
 
 } // namespace WebCore
